--- a/Solutions/Week6/Week6Solution/BIWebApp/BIWebApp.csproj
+++ b/Solutions/Week6/Week6Solution/BIWebApp/BIWebApp.csproj
@@ -10,4 +10,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\" />
+    <Folder Include="Services\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
+
 </Project>
